--- a/index.css
+++ b/index.css
@@ -1,109 +1,136 @@
-header {
-  background-color:rgb(199, 0, 66);
-  color: rgb(255, 211, 13);
-  text-align: center;
-  padding: 20px;
-  margin: 0px;
+nav {
+    background-color: #a84c64;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+  }
+  
+  .RS {
+    text-align: center;
+    background-color: #a84c64;
+    color: white;
+    font-size: 30px;
   }
 
-body {
-    margin: 50px;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    
-  }
-  
-  
-  h1 {
-    margin: 0;
-    background-color:rgb(199, 0, 66);
-    text-align: center;
+
+  nav a {
+    text-decoration: none;
+    color: aliceblue;
+    padding-left: 70px;
+    padding-right: 70px;
     font-size: 20px;
-
+    border-right: 1px solid black;
+    background-color: #a84c64;
   }
   
-  .image-container img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
-    
+  nav a:last-child {
+    border-right: 0px;
   }
   
-  .image-caption {
-    background-color: rgb(199, 0, 66);
-    color:black;
-    padding: 10px;
-    text-align: center;
+  #imagemescritorio {
+    width: 100%;
+    height: 700px;
+    border: 0px;
   }
   
-  .text-container {
-    text-align: center;
-    padding: 20px;
-    font-size: 25px;
+  #conteudo {
+    display: flex;
+    margin-top: 30px;
+    margin-bottom: 40px;
   }
   
-  .text-container h2 {
-    margin-top: 0;
+  #texto {
+    background-color: antiquewhite;
+    width: 50%;
+    height: 1000px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
-
+  
+  #imagens {
+    background-color: antiquewhite;
+    width: 50%;
+    height: 1000px;
+    justify-content: center;
+  }
+  
+  #linha1 {
+    width: 100%;
+    height: 33.3%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+  
+  #linha2 {
+    width: 100%;
+    height: 33.3%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+  
+  #linha3 {
+    width: 100%;
+    height: 33.3%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+  
+  figure {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .fotos {
+    border: 3px solid #a84c64;
+    height: 300px;
+    width: 250px;
+  }
+  
+  figcaption {
+    background-color: #a84c64;
+    width: 249px;
+    display: flex;
+    color: aliceblue;
+    justify-content: center;
+    align-items: center;
+    padding: 3px;
+  }
+  
   body {
-    margin: 0;
-    padding: 0;
-    background-color: bisque;
-}
-
-header {
-    background-color: ;
-    color: white;
-    padding: 10px;
-}
-
-.image-container {
-    position: relative;
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-.image-container img {
-    max-width: 100%;
-    height: auto;
-}
-
-.image-caption {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.8);
-    color: white;
-    padding: 10px;
-    background-color: bisque;
-}
-
-.text-container {
-    margin-left: 20px;
-    text-align: left;
-    background-color: bisque;
-}
-
-.table-container {
-    margin-right: 20px;
-    text-align: center;
-    color: azure;
-}
-
-
-table {
-    border-collapse: collapse;
-    float: right;
-    background-color:rgb(199, 0, 66) ;
-}
-
-.caixa-colorida {
-    background-color:rgb(199, 0, 66);
-    margin-top: 100px;
-    position: fixed
-    bottom: 0px;
-}
-
-
+    background-color: antiquewhite;
+  }
+  
+  footer {
+    width: 100%;
+    height: 50px;
+    background-color: #a84c64;
+  }
+  
+  h2 {
+    padding-right: 250px;
+    padding-bottom: 40px;
+    font-size: 50px;
+    padding-left: 30px;
+    font-family: sans-serif;
+    color: #a84c64;
+  }
+  
+  p {
+    padding-bottom: 30px;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-size: 20px;
+    font-family: sans-serif;
+    color: brown;
+  }
+  
+  * {
+    margin: 0px;
+    padding: 0%;
+  }
